# django-tutorial

./: .gitignore  README.rst  requirements.txt
django-polls/: LICENCE  README.rst  setup.cfg
django-polls/polls/: admin.py  views.py
mysite/: db.sqlite3
mysite/mysite/: settings.py
mysite/polls/: models.py  tests.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_rename_answer_choice.py
mysite/polls/static/polls/: style.css
mysite/polls/templates/polls/: detail.html  index.html  results.html
mysite/templates/admin/: base_site.html  index.html
