[metadata]
name = django-polls
version = 0.1
description = A Django application to conduct web-based polls
long_description = file: README.rst
author = Michael Lohier
author_email = michael.lohier.webdev@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_packages_data = true
packages = find:
python_requires = >=3.10.6
install_requires =
    Django >= 4.1
